--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -929,6 +929,9 @@
     <ClInclude Include="Features\Model\Skeleton.h">
       <Filter>Feature\Model</Filter>
     </ClInclude>
+    <ClInclude Include="Features\Model\SkinCluster.h">
+      <Filter>Feature\Model</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
