--- a/SampleProject/SampleProject.vcxproj.filters
+++ b/SampleProject/SampleProject.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Game\Scene\CG4Task2">
       <UniqueIdentifier>{7aabeae0-5209-458a-a0ee-0a7175f78d68}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Scene\CG5Task1">
+      <UniqueIdentifier>{8877e688-0af5-4bbb-9f61-04cb52801a6c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -81,6 +84,9 @@
     <ClCompile Include="Scene\CG4Task2\CG4Task2.cpp">
       <Filter>Game\Scene\CG4Task2</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\CG5Task1\CG5Task1.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SampleProgram\SampleProgram.h">
@@ -112,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="Scene\CG4Task2\CG4Task2.h">
       <Filter>Game\Scene\CG4Task2</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene\CG5Task1\CG5Task1.h">
+      <Filter>Game\Scene\CG5Task1</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
