--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -732,6 +732,10 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0xB3996DE4,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
   DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,734 Split=X
