--- a/SampleProject/imgui.ini
+++ b/SampleProject/imgui.ini
@@ -736,22 +736,38 @@ Column 1  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x6E1D0403,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x2E38DB39,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xDA04A9E6,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x58279FC3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
 DockSpace           ID=0xD5ACB325 Window=0xA87D555D Pos=0,0 Size=32,32 Split=Y Selected=0x13926F0B
-  DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,734 Split=X
-    DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1173,900 Split=Y
+  DockNode          ID=0x0000000A Parent=0xD5ACB325 SizeRef=1600,728 Split=X
+    DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=1478,900 Split=Y
       DockNode      ID=0x00000001 Parent=0x0000000C SizeRef=1600,708 Split=X Selected=0x13926F0B
         DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=0,0 Split=X Selected=0x13926F0B
           DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=135,657 Selected=0xFCB30AB3
-          DockNode  ID=0x00000011 Parent=0x00000003 SizeRef=1036,657 CentralNode=1 Selected=0x13926F0B
+          DockNode  ID=0x00000011 Parent=0x00000003 SizeRef=1341,657 CentralNode=1 Selected=0x13926F0B
         DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=534,450 Selected=0x8EDA8100
       DockNode      ID=0x00000002 Parent=0x0000000C SizeRef=1600,241 Selected=0x64F50EE5
-    DockNode        ID=0x00000006 Parent=0x0000000A SizeRef=425,900 Selected=0x392A5ADD
-  DockNode          ID=0x0000000B Parent=0xD5ACB325 SizeRef=1600,273 Split=X Selected=0x64F50EE5
+    DockNode        ID=0x00000006 Parent=0x0000000A SizeRef=440,900 Selected=0x392A5ADD
+  DockNode          ID=0x0000000B Parent=0xD5ACB325 SizeRef=1600,279 Split=X Selected=0x64F50EE5
     DockNode        ID=0x0000000E Parent=0x0000000B SizeRef=1189,241 Split=X Selected=0x3A93B30B
       DockNode      ID=0x00000007 Parent=0x0000000E SizeRef=963,241 Selected=0x64F50EE5
       DockNode      ID=0x00000008 Parent=0x0000000E SizeRef=224,241 Selected=0x3A93B30B
     DockNode        ID=0x0000000F Parent=0x0000000B SizeRef=409,241 Split=Y Selected=0x60B79D0E
-      DockNode      ID=0x0000000D Parent=0x0000000F SizeRef=409,100 Selected=0x8EDA8100
+      DockNode      ID=0x0000000D Parent=0x0000000F SizeRef=409,106 Selected=0x8EDA8100
       DockNode      ID=0x00000010 Parent=0x0000000F SizeRef=409,171 Selected=0x60B79D0E
 
